Initial Java 21 migration changes